--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-EXTENSION_API_KEY=6332e8ce419d82451197c1be
-EXTENSION_API_SECRET=ORxrOJlnNNC47wL
-EXTENSION_BASE_URL=https://a371-2405-201-2014-50a5-1d7-eef2-4c45-d8a2.in.ngrok.io 
-EXTENSION_CLUSTER_URL=https://api.fyndx0.de
-PORT=8080
+EXTENSION_API_KEY=<api_key>
+EXTENSION_API_SECRET=<api_secret>
+EXTENSION_BASE_URL=<base_url>
+PORT=<port>
