--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@gofynd/fdk-client-javascript": "^1.0.0",
+    "@gofynd/fdk-client-javascript": "^1.3.5",
     "@gofynd/nitrozen-react": "^2.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -20,7 +20,7 @@
     "ioredis": "^5.2.2",
     "convict": "^6.2.3",
     "cookie-parser": "^1.4.6",
-    "fdk-extension-javascript": "git+https://github.com/gofynd/fdk-extension-javascript.git#v0.5.3"
+    "fdk-extension-javascript": "git+https://github.com/gofynd/fdk-extension-javascript.git#v0.6.0-beta.3"
   },
   "scripts": {
     "start": "node index.js",
