--- a/package.json
+++ b/package.json
@@ -5,23 +5,18 @@
   "dependencies": {
     "@gofynd/fdk-client-javascript": "^1.3.5",
     "@gofynd/nitrozen-react": "^2.0.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.6.1",
-    "react-scripts": "5.0.1",
-    "url-join": "^5.0.0",
-    "web-vitals": "^2.1.4",
-    "window-or-global": "^1.0.1",
-    "ioredis": "^5.2.2",
     "convict": "^6.2.3",
     "cookie-parser": "^1.4.6",
     "fdk-extension-javascript": "git+https://github.com/gofynd/fdk-extension-javascript.git#v0.6.0-beta.3",
-    "lodash.isempty": "^4.4.0"
+    "ioredis": "^5.2.2",
+    "lodash.isempty": "^4.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.6.1",
+    "url-join": "^5.0.0",
+    "window-or-global": "^1.0.1"
   },
   "scripts": {
     "start": "node index.js",
@@ -52,5 +47,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "supertest": "^6.3.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0"
   }
 }
