--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "bootstrap": "^5.2.3",
     "convict": "^6.2.3",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "fdk-extension-javascript": "git+https://github.com/gofynd/fdk-extension-javascript.git#v0.6.0-beta.3",
     "ioredis": "^5.2.2",
     "lodash.isempty": "^4.4.0",
@@ -22,13 +24,8 @@
     "start": "node index.js",
     "serve": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest --updateSnapshot --projects src app --no-cache --detectOpenHandles --json --outputFile=./coverage/coverage.json",
+    "test": "jest --config app/jest.config.js app src --no-cache --detectOpenHandles --json --outputFile=./coverage/coverage.json",
     "eject": "react-scripts eject"
-  },
-  "jest": {
-    "projects": [
-      "app/jest.config.js"
-    ]
   },
   "eslintConfig": {
     "extends": [
@@ -49,9 +46,10 @@
     ]
   },
   "devDependencies": {
-    "supertest": "^6.3.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0"
+    "@testing-library/user-event": "^13.5.0",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.0"
   }
 }
