--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
+    "react-scripts": "^5.0.1",
     "url-join": "^5.0.0",
     "window-or-global": "^1.0.1"
   },
