--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "^5.0.1",
-    "url-join": "^5.0.0",
+    "url-join": "4.0.1",
     "window-or-global": "^1.0.1"
   },
   "scripts": {
     "start": "node index.js",
     "serve": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest --config app/jest.config.js app src --no-cache --detectOpenHandles --json --outputFile=./coverage/coverage.json",
+    "test:node": "jest --config app/jest.config.js app --no-cache --detectOpenHandles --json --outputFile=./coverage/coverage.json",
+    "test:react": "jest --updateSnapshot --projects src --no-cache --detectOpenHandles --json --outputFile=./coverage/coverage.json",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -47,10 +48,14 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.8",
+    "@babel/preset-react": "^7.24.7",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^13.5.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-transform-stub": "^2.0.0",
     "supertest": "^6.3.0"
   }
 }
