--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "window-or-global": "^1.0.1"
   },
   "scripts": {
-    "start": "node index.js",
-    "serve": "react-scripts start",
+    "start": "nodemon index.js",
+    "serve": "PORT=8081 react-scripts start",
+    "dev-start": "concurrently \"npm run start\" \"npm run serve\"",
     "build": "react-scripts build",
     "test:node": "jest --config app/jest.config.js app --no-cache --detectOpenHandles --json --outputFile=./coverage/coverage.json",
     "test:react": "jest --updateSnapshot --projects src --no-cache --detectOpenHandles --json --outputFile=./coverage/coverage.json",
@@ -53,9 +54,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^13.5.0",
+    "concurrently": "^8.2.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-transform-stub": "^2.0.0",
+    "nodemon": "^3.1.4",
     "supertest": "^6.3.0"
   }
 }
