--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ EXTENSION_API_KEY=<api_key>
 EXTENSION_API_SECRET=<api_secret>
 EXTENSION_BASE_URL=<base_url>
 PORT=8080
-REDIS_EXTENSIONS_READ_WRITE=<redis_url>
+EXTENSION_CLUSTER_URL=<cluster_url>
