--- a/package.json
+++ b/package.json
@@ -4,22 +4,18 @@
   "private": true,
   "dependencies": {
     "@gofynd/fdk-client-javascript": "^1.3.5",
-    "@gofynd/nitrozen-react": "^2.0.2",
     "axios": "^1.2.1",
-    "bootstrap": "^5.2.3",
-    "convict": "^6.2.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fdk-extension-javascript": "git+https://github.com/gofynd/fdk-extension-javascript.git#v0.6.0-beta.3",
-    "ioredis": "^5.2.2",
     "lodash.isempty": "^4.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "^5.0.1",
-    "url-join": "4.0.1",
-    "window-or-global": "^1.0.1"
+    "sqlite3": "^5.1.7",
+    "url-join": "4.0.1"
   },
   "scripts": {
     "start": "nodemon index.js",
