vite js HMR support

--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-EXTENSION_API_KEY=<api_key>
-EXTENSION_API_SECRET=<api_secret>
-EXTENSION_BASE_URL=<base_url>
-PORT=8080
-EXTENSION_CLUSTER_URL=<cluster_url>
+EXTENSION_API_KEY=66a0e5befb9ac59e447b28d1
+EXTENSION_API_SECRET=Csv5i_SunngPj1K
+EXTENSION_BASE_URL="https://mounted-rugby-advisor-ty.trycloudflare.com"
+PORT=3000
