--- a/package.json
+++ b/package.json
@@ -8,20 +8,22 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "fdk-extension-javascript": "git+https://github.com/gofynd/fdk-extension-javascript.git#v0.6.0-beta.3",
+    "fdk-extension-javascript": "git+https://github.com/gofynd/fdk-extension-javascript.git#add-sqlite-support-for-storage",
     "lodash.isempty": "^4.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "^5.0.1",
+    "serve-static": "^1.15.0",
     "sqlite3": "^5.1.7",
     "url-join": "4.0.1"
   },
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
     "start": "nodemon index.js",
     "serve": "PORT=8081 react-scripts start",
     "dev-start": "concurrently \"npm run start\" \"npm run serve\"",
-    "build": "react-scripts build",
     "test:node": "jest --config app/jest.config.js app --no-cache --detectOpenHandles --json --outputFile=./coverage/coverage.json",
     "test:react": "jest --updateSnapshot --projects src --no-cache --detectOpenHandles --json --outputFile=./coverage/coverage.json",
     "test": "npm run test:node && npm run test:react",
@@ -51,11 +53,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "concurrently": "^8.2.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-transform-stub": "^2.0.0",
     "nodemon": "^3.1.4",
-    "supertest": "^6.3.0"
+    "supertest": "^6.3.0",
+    "vite": "^5.3.5"
   }
 }
