Folder and Review cmt changes

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-EXTENSION_API_KEY=66a0e5befb9ac59e447b28d1
-EXTENSION_API_SECRET=Csv5i_SunngPj1K
-EXTENSION_BASE_URL="https://mounted-rugby-advisor-ty.trycloudflare.com"
-PORT=3000
+EXTENSION_API_KEY=<api_key>
+EXTENSION_API_SECRET=<api_secret>
+EXTENSION_BASE_URL=<base_url>
+BACKEND_PORT=8080
+FRONTEND_PORT=8081
