--- a/.github/workflows/call_test_cases.yml
+++ b/.github/workflows/call_test_cases.yml
@@ -33,14 +33,8 @@ jobs:
         npm install
         npm run test
 
-    - name: Install packages and run tests for react
-      working-directory: ./web
-      run: |
-        npm install
-        npm run test
-
     - name: Coveralls (Uploading test report)
-      #if: ${{ steps.get_branch.outputs.branch == 'master' || steps.get_branch.outputs.branch == 'fpco-38359-test-case-setup' }}
-      uses: coverallsapp/github-action@master
+      if: ${{ steps.get_branch.outputs.branch == 'main' }}
+      uses: coverallsapp/github-action@main
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
