--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "jest --config jest.config.js --no-cache --detectOpenHandles --json --outputFile=./coverage/coverage.json && node coverage_output.js"
   },
   "nodemonConfig": {
-    "ignore": ["web/**"]
+    "ignore": [
+      "web/**"
+    ]
   },
   "dependencies": {
     "@gofynd/fdk-client-javascript": "^1.4.7",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "axios-mock-adapter": "^1.21.2",
+    "concurrently": "^8.2.2",
     "jest": "^29.7.0",
     "nodemon": "^3.1.4",
     "supertest": "^6.3.0"
