--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
     "dev": "vite",
     "build": "vite build",
     "start": "nodemon index.js",
-    "test": "jest --updateSnapshot --no-cache --detectOpenHandles --json --outputFile=./coverage/coverage.json",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "type": "module",
