--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,7 +6,7 @@
     "moduleResolution": "node",
     "paths": {
       "@/*": [
-        "web/*"
+        "frontend/*"
       ]
     },
     "lib": [
