--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "start": "npm run start:dev",
     "start:dev": "nodemon index.js",
     "start:prod": "NODE_ENV=production node index.js",
-    "test": "jest --config jest.config.js --no-cache --detectOpenHandles --json --outputFile=./coverage/coverage.json && node coverage_output.js"
+    "test": "jest --config jest.config.js --no-cache --detectOpenHandles --json --outputFile=./coverage/coverage.json"
   },
   "nodemonConfig": {
     "ignore": [
-      "web/**"
+      "frontend/**"
     ]
   },
   "dependencies": {
