--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 EXTENSION_API_KEY=<api_key>
 EXTENSION_API_SECRET=<api_secret>
 EXTENSION_BASE_URL=<base_url>
-PORT=8080
+BACKEND_PORT=8080
+FRONTEND_PORT=8081
