--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ pnpm-debug.log*
 *.sln
 *.sw?
 
-/dist
+/frontend/dist/*
 
 # ignore snapshots
 __snapshots__/
@@ -33,3 +33,8 @@ coverage/
 .vscode/*
 !.vscode/launch.json
 .idea/
+
+# ignore coverage_output.json
+coverage_output.json
+# SQLite DB
+session_storage.db
