--- a/package.json
+++ b/package.json
@@ -1,56 +1,37 @@
 {
   "name": "groot",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "start": "npm run start:dev",
+    "start:dev": "nodemon index.js",
+    "start:prod": "NODE_ENV=production node index.js",
+    "test": "jest --config jest.config.js --no-cache --detectOpenHandles --json --outputFile=./coverage/coverage.json"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "frontend/**"
+    ]
+  },
   "dependencies": {
-    "@gofynd/fdk-client-javascript": "^1.3.5",
-    "@gofynd/nitrozen-react": "^2.0.2",
-    "axios": "^1.2.1",
-    "bootstrap": "^5.2.3",
-    "convict": "^6.2.3",
+    "@gofynd/fdk-client-javascript": "^1.4.7",
+    "axios": "^1.7.2",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "fdk-extension-javascript": "git+https://github.com/gofynd/fdk-extension-javascript.git#v0.6.0-beta.3",
-    "ioredis": "^5.2.2",
-    "lodash.isempty": "^4.4.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.6.1",
-    "react-scripts": "^5.0.1",
-    "url-join": "^5.0.0",
-    "window-or-global": "^1.0.1"
-  },
-  "scripts": {
-    "start": "node index.js",
-    "serve": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "jest --config app/jest.config.js app src --no-cache --detectOpenHandles --json --outputFile=./coverage/coverage.json",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "fdk-extension-javascript": "git+https://github.com/gofynd/fdk-extension-javascript.git#v0.7.8",
+    "serve-static": "^1.15.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "axios-mock-adapter": "^1.21.2",
+    "concurrently": "^8.2.2",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.4",
     "supertest": "^6.3.0"
+  },
+  "engines": {
+    "node": ">=16.x"
   }
 }
