--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "web/frontend"]
-	path = web/frontend
+[submodule "frontend"]
+	path = frontend
 	url = https://github.com/gofynd/example-extension-react
