Added dockerFile doc in readme     - min node version 18     - Added dockerignore file

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,4 @@ EXTENSION_API_SECRET=<api_secret>     # Your API secret for authenticating reque
 EXTENSION_BASE_URL=<base_url>         # Base URL for the extension API
 
 # Server Configuration
-BACKEND_PORT=<backend_port>           # Port number for the backend server
-FRONTEND_PORT=<frontend_port>         # Port number for the frontend application
+BACKEND_PORT=8080                     # Port number for the backend server
