--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   },
   "dependencies": {
     "@gofynd/fdk-client-javascript": "^1.4.7",
+    "@gofynd/fdk-extension-javascript": "^0.7.9",
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "fdk-extension-javascript": "git+https://github.com/gofynd/fdk-extension-javascript.git#v0.7.8",
     "serve-static": "^1.15.0",
     "sqlite3": "^5.1.7"
   },
