--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ EXTENSION_BASE_URL=<base_url>         # Base URL for the extension API
 
 # Server Configuration
 BACKEND_PORT=8080                     # Port number for the backend server
+
+# Optional Configurations
+# FP_API_DOMAIN=<fynd_api_domain>       # Fynd Platform API Domain (optional: default value is `api.fynd.com`) (Set this if you are using any other fynd cluster)
