--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "serve-static": "^1.15.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "fdk-billing-javascript": "github:gofynd/fdk-extension-utils-javascript",
+    "mongoose": "^8.0.0"
   },
   "devDependencies": {
     "axios-mock-adapter": "^1.21.2",
